--- a/joesAutomotiveCRM/joesAutomotiveCRM/joesAutomotiveCRM.csproj
+++ b/joesAutomotiveCRM/joesAutomotiveCRM/joesAutomotiveCRM.csproj
@@ -66,19 +66,43 @@
     <Compile Include="customersGrid.Designer.cs">
       <DependentUpon>customersGrid.cs</DependentUpon>
     </Compile>
+    <Compile Include="invoicesGrid.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="invoicesGrid.Designer.cs">
+      <DependentUpon>invoicesGrid.cs</DependentUpon>
+    </Compile>
     <Compile Include="mainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="mainForm.Designer.cs">
       <DependentUpon>mainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="partsGrid.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="partsGrid.Designer.cs">
+      <DependentUpon>partsGrid.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="vehiclesGrid.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="vehiclesGrid.Designer.cs">
+      <DependentUpon>vehiclesGrid.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="customersGrid.resx">
       <DependentUpon>customersGrid.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="invoicesGrid.resx">
+      <DependentUpon>invoicesGrid.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="mainForm.resx">
       <DependentUpon>mainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="partsGrid.resx">
+      <DependentUpon>partsGrid.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -90,6 +114,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="vehiclesGrid.resx">
+      <DependentUpon>vehiclesGrid.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
