--- a/joesAutomotiveCRM/joesAutomotiveCRM/joesAutomotiveCRM.csproj
+++ b/joesAutomotiveCRM/joesAutomotiveCRM/joesAutomotiveCRM.csproj
@@ -60,6 +60,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="customersDetails.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="customersDetails.Designer.cs">
+      <DependentUpon>customersDetails.cs</DependentUpon>
+    </Compile>
     <Compile Include="customersGrid.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,12 +92,21 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="vehicleDetails.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="vehicleDetails.Designer.cs">
+      <DependentUpon>vehicleDetails.cs</DependentUpon>
+    </Compile>
     <Compile Include="vehiclesGrid.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="vehiclesGrid.Designer.cs">
       <DependentUpon>vehiclesGrid.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="customersDetails.resx">
+      <DependentUpon>customersDetails.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="customersGrid.resx">
       <DependentUpon>customersGrid.cs</DependentUpon>
     </EmbeddedResource>
@@ -114,6 +129,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="vehicleDetails.resx">
+      <DependentUpon>vehicleDetails.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="vehiclesGrid.resx">
       <DependentUpon>vehiclesGrid.cs</DependentUpon>
     </EmbeddedResource>
