--- a/joesAutomotiveCRM/joesAutomotiveCRM/joesAutomotiveCRM.csproj
+++ b/joesAutomotiveCRM/joesAutomotiveCRM/joesAutomotiveCRM.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -190,6 +191,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>joesAutomotiveDB.mdf</DependentUpon>
     </Content>
+    <None Include="Resources\search.png" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
